SAK-44296 - T&Q QuestionPoolTreeImpl stack traces - refactored to use Optionals